--- a/notebooks/adabkb_vs_randbkb.ipynb
+++ b/notebooks/adabkb_vs_randbkb.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,9 @@
     "F = 1.0\n",
     "qbar = 2.0\n",
     "delta = 1e-5\n",
+    "dot = RBF(sigma)\n",
+    "T = 700\n",
+    "h_max = 6\n",
     "fun = Ackley(d, (lam, rnd_state))\n",
     "main_path = \"./out/{}\".format(fun.name)\n",
     "os.makedirs(main_path, exist_ok=True)\n",
@@ -93,20 +96,40 @@
     "    f.write(\"\\t[--] d: {}\\n\".format(fun.search_space.shape[0]))\n",
     "    f.write(\"\\t[--] minimizers: {}\\n\".format(fun.global_min[0]))\n",
     "    f.write(\"\\t[--] minimum: {}\\n\".format(fun.global_min[1]))\n",
-    "    f.write(\"\\t[--] search space: {}\\n\".format(fun.search_space))\n",
+    "    f.write(\"\\t[--] search space: {}\\n\".format(list(fun.search_space)))\n",
     "    f.write(\"[++] parameters\\n\")\n",
     "    f.write(\"\\t[--] sigma: {}\\n\".format(sigma))\n",
     "    f.write(\"\\t[--] lambda: {} (variance: {})\\n\".format(lam, noise_var))\n",
     "    f.write(\"\\t[--] |f|: {}\\tqbar: {}\\n\".format(F,qbar))\n",
-    "    f.write(\"\\t[--] delta: {}\\n\".format(delta))"
+    "    f.write(\"\\t[--] delta: {}\\n\".format(delta))\n",
+    "    f.write(\"\\t[--] budget: {}\\th_max: {}\\n\".format(T, h_max))"
    ]
   },
   {
+   "source": [
+    "## Random BKB"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[--] s: 10\n[--] s: 5633\n[--] s: 11257\n[--] s: 16881\n[--] s: 22505\n[--] s: 28129\n[--] s: 33753\n[--] s: 39377\n[--] s: 45001\n[--] s: 50625\n"
+     ]
+    }
+   ],
+   "source": [
+    "ns = [int(x) for x in np.linspace(10, 15**4, 10)]\n",
+    "for s in ns:\n",
+    "    print(\"[--] s: {}\".format(s))\n"
+   ]
   }
  ]
 }
