--- a/notebooks/AdaBKB_example.ipynb
+++ b/notebooks/AdaBKB_example.ipynb
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "from benchmark_functions import Levy, Ackley, Rosenbrock\n",
+    "from benchmark_functions import Branin\n",
     "\n",
     "def plot_fun(x1 : np.ndarray, x2 : np.ndarray, fun):\n",
     "    X = np.zeros((x1.shape[0], x2.shape[0]), dtype=np.float64, order=\"C\")\n",
@@ -89,7 +89,7 @@
     "    ax.plot(gmins[:, 0], gmins[:, 1], 'x', c='black', label=\"real optimizer\")\n",
     "    fig.colorbar(c, ax=ax)\n",
     "    return fig, ax\n",
-    "fun = Rosenbrock(2, (0.0, RandomState(42)))\n",
+    "fun = Branin((0.5, RandomState(42)))\n",
     "x1 = np.linspace(fun.search_space[0][0], fun.search_space[0][1], 400).reshape(-1)\n",
     "x2 = np.linspace(fun.search_space[1][0], fun.search_space[1][1], 400).reshape(-1)\n",
     "fig, ax = plot_fun(x1, x2, fun)"
